Fixed UI and Date Range

--- a/web-app/css/main.css
+++ b/web-app/css/main.css
@@ -35,17 +35,14 @@ body {
 
     /*background: #ffffff;*/
     color: #333333;
-    margin: 0 auto;
-    max-width: 1100px;
+    margin: 10  auto;
+    max-width: 900px;
     overflow-x: hidden; /* prevents box-shadow causing a horizontal scrollbar in firefox when viewport < 960px wide */
-    -moz-box-shadow: 0 0 0.3em #255b17;
-    -webkit-box-shadow: 0 0 0.3em #255b17;
-    box-shadow: 0 0 0.3em #255b17;
 }
 
 .container {
     margin: 0 auto;
-    padding: 0 6px;
+    /*padding: 0 6px;*/
     width: 900px;
 }
 
@@ -129,24 +126,78 @@ a:hover {
     /*color:black;*/
 /*}*/
 
-.heading {
-    margin: 10px 0 0 0;
-    border-bottom: 1px solid #000;
-    overflow: hidden;
-    height: 100%;
+.topbar {
+    background-color: #ffffff;
+    margin-bottom: 5px;
+    -moz-box-shadow: 0 0 3px #BBBBBB;
+    -webkit-box-shadow: 0 0 3px #BBBBBB;
+    box-shadow: 0 0 3px #BBBBBB;
+    padding: 10px;
 }
 
-.heading h1 {
+.dpheLogo {
+    height: 100px;
+}
+
+.header {
+    padding: 20px;
+    padding-bottom: 10px;
+    color: #006699;
+}
+
+.subHeader {
+    padding-left: 20px;
+    color: #555555;
+    font-size: 16px;
+}
+
+.loginInfo {
+    font-size: 11px;
+    font-weight: bold;
+    text-align: right;
+    line-height: 15px;
+}
+
+.body {
+    /*margin: 10px 0 0 0;*/
+    overflow: hidden;
+    background-color: #FFFFFF;
+    /*padding: 10px 20px 10px 25px;*/
+    padding: 2px;
+    -moz-box-shadow: 0 0 3px #BBBBBB;
+    -webkit-box-shadow: 0 0 3px #BBBBBB;
+    box-shadow: 0 0 3px #BBBBBB;
+    border-color: #D6D6D6;
+}
+
+.body h2 {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 24px;
+    font-size: 18px;
     font-weight: bold;
     font-variant: normal;
     color: #000000;
-    float: left;
+}
+
+
+.content {
+    /*border-style: solid solid none;*/
+    /*border-width: 1px 1px 0;*/
+    /*margin: 10px 0 0;*/
+}
+
+.dialog {
+    padding: 15px;
+    color: #000000;
+    background-color: #FFFFFF;
 }
 
 .nav {
 /*margin: 8px 5px 8px 15px;*/
+    border: 1px solid #AAAAAA;
+    /*border-bottom: 1px solid #AAAAAA;*/
+    padding: 8px;
+    background-color: #f2f2f2;
+    margin: 10px;
 }
 
 .nav ul {
@@ -197,20 +248,6 @@ a:hover {
 
 .nav li.other a {
     padding-left: 20px;
-}
-
-.content {
-    -moz-box-shadow: 0 0 3px #BBBBBB;
-    border-color: #D6D6D6;
-    border-style: solid solid none;
-    border-width: 1px 1px 0;
-    margin: 12px 0 0;
-}
-
-.dialog {
-    padding: 15px;
-    color: #000000;
-    background-color: #FFFFFF;
 }
 
 .value {
@@ -360,17 +397,20 @@ input, textarea {
 }
 
 .buttons {
-    background: url("../images/buttonBG2.jpg") repeat-x scroll center bottom #FFFFFF;
+    /*background: url("../images/buttonBG2.jpg") repeat-x scroll center bottom #FFFFFF;*/
+    background-color: #f3f3f3;
+    border: 1px solid #AAAAAA;
     color: #666666;
-    padding: 12px;
+    padding: 8px;
+    margin: 10px;
 }
 
 .buttons input, .button {
-    color: #333333;
+    color: #FFFFFF;
     cursor: pointer;
     font-weight: bold;
     padding: 2px 8px;
-    background: url("../images/buttonBG.jpg") repeat-x #FFFFFF;
+    background: repeat-x #006699;
 }
 
 /********* Table QerReportList ****************/
@@ -884,3 +924,5 @@ pre {
     /*color: #006699;*/
     /*display: block;*/
 /*}*/
+
+
